Suppress jansi warning during prod mode on autorun script